Reset to 1.3.3